Gestion des menus
Configuration de l'apparition des pages.

--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -1,3 +1,11 @@
 {
+  "accueil": "Accueil",
+  "bonjour": "Bonjour",
+  "description": "Description",
+  "menu": "Menu",
+  "niveaux": "Niveaux",
+  "parametres": "Paramètres",
+  "secteuractivite": "Secteur d'activité",
+  "secteuractivites": "Secteurs d'activité",
   "text": "It works!"
 }
