Première version de la carte

--- a/app/lang/de.json
+++ b/app/lang/de.json
@@ -1,24 +1,29 @@
 {
   "accueil": "Accueil",
+  "bicyclette": "bicyclette",
   "bonjour": "Bonjour",
   "carte": "Carte",
+  "conduite": "conduite",
   "deconnexion": "Déconnexion",
   "description": "Description",
   "editer": "Editer",
-  "enregister": "Enregistrer",
   "enregistrerniveau": "Enrégistrer un Niveau",
   "enregistrersecteuractivite": "Enrégistrer un secteur d'activités",
   "maposition": "Ma Position",
+  "marche": "marche",
   "menu": "Menu",
+  "modedeplacement": "mode de deplacement",
   "modifier": "Modifier",
   "niveau": "Niveau",
   "niveaux": "Niveaux",
   "parametres": "Paramètres",
   "position": "Position",
+  "recherche": "Recherche",
+  "sauvegarder": "Sauvegarder",
   "secteuractivite": "Secteur d'activité",
   "secteuractivites": "Secteurs d'activité",
   "supprimer": "Supprimer",
   "terminer": "Terminer",
   "text": "Es funktioniert",
-  "recherche":"Recherche"
+  "transit": "transit"
 }
