intégration de todo

--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -4,11 +4,17 @@
   "bonjour": "Bonjour",
   "carte": "Carte",
   "conduite": "conduite",
+  "datenais": "Date de naissance",
   "deconnexion": "Déconnexion",
   "description": "Description",
   "editer": "Editer",
+  "email": "Email",
   "enregistrerniveau": "Enrégistrer un Niveau",
+  "enregistrerpersonne": "Enregistrer une personne",
   "enregistrersecteuractivite": "Enrégistrer un secteur d'activités",
+  "femme": "Femme",
+  "homme": "Homme",
+  "libelle": "Libellé",
   "maposition": "Ma Position",
   "marche": "marche",
   "menu": "Menu",
@@ -16,14 +22,27 @@
   "modifier": "Modifier",
   "niveau": "Niveau",
   "niveaux": "Niveaux",
+  "nom": "Nom",
+  "note": "Note",
   "parametres": "Paramètres",
+  "personne": "Personnes",
+  "personnes": "Personnes",
   "position": "Position",
+  "prenoms": "Prenoms",
   "recherche": "Recherche",
   "sauvegarder": "Sauvegarder",
   "secteuractivite": "Secteur d'activité",
   "secteuractivites": "Secteurs d'activité",
+  "sexe": "Sexe",
   "supprimer": "Supprimer",
+  "tel1": "Numéro de téléphone 1",
+  "tel2": "Numéro de téléphone 2",
   "terminer": "Terminer",
   "text": "It works!",
-  "transit": "transit"
+  "transit": "transit",
+  "utilisateur": "Utilisateur",
+  "utilisateurs": "Utilisateurs",
+  "enregistrertache":"Enrégistrer une tache",
+  "taches":"Tâches",
+  "tache":"Tâche"
 }
