Mise à jour de todos.
Les fonctionnalités sont Ok.Il faut maintenant disposer d'une base de données locale.

--- a/app/lang/de.json
+++ b/app/lang/de.json
@@ -44,5 +44,6 @@
   "text": "Es funktioniert",
   "transit": "transit",
   "utilisateur": "Utilisateur",
-  "utilisateurs": "Utilisateurs"
+  "utilisateurs": "Utilisateurs",
+  "synchroniser":"Synchroniser"
 }
