--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -44,5 +44,6 @@
   "text": "It works!",
   "transit": "transit",
   "utilisateur": "Utilisateur",
-  "utilisateurs": "Utilisateurs"
+  "utilisateurs": "Utilisateurs",
+  "synchroniser":"Synchroniser"
 }
