Mise à Jour de travaux et personnes

--- a/app/lang/de.json
+++ b/app/lang/de.json
@@ -4,23 +4,28 @@
   "bonjour": "Bonjour",
   "carte": "Carte",
   "conduite": "conduite",
+  "datedeb": "Date de début",
+  "datefin": "Date de fin",
   "datenais": "Date de naissance",
   "deconnexion": "Déconnexion",
   "description": "Description",
   "editer": "Editer",
   "email": "Email",
+  "enregistrerjob": "Enregistrer un travail",
   "enregistrerniveau": "Enrégistrer un Niveau",
   "enregistrerpersonne": "Enregistrer une personne",
   "enregistrersecteuractivite": "Enrégistrer un secteur d'activités",
   "enregistrertache": "Enrégistrer une tâche",
   "femme": "Femme",
   "homme": "Homme",
+  "jobs": "Travaux",
   "libelle": "Libellé",
   "maposition": "Ma Position",
   "marche": "marche",
   "menu": "Menu",
   "modedeplacement": "mode de deplacement",
   "modifier": "Modifier",
+  "nbrepers": "Nombre de personnes",
   "niveau": "Niveau",
   "niveaux": "Niveaux",
   "nom": "Nom",
@@ -36,6 +41,7 @@
   "secteuractivites": "Secteurs d'activité",
   "sexe": "Sexe",
   "supprimer": "Supprimer",
+  "synchroniser": "Synchroniser",
   "tache": "Tâche",
   "taches": "Tâches",
   "tel1": "Numéro de téléphone 1",
@@ -45,5 +51,22 @@
   "transit": "transit",
   "utilisateur": "Utilisateur",
   "utilisateurs": "Utilisateurs",
-  "synchroniser":"Synchroniser"
+  "v_description": "La description",
+  "v_libniv": "Le libellé du niveau",
+  "v_note": "La note",
+  "v_libjob": "Le libellé du travail",
+  "s_modification": "Modification réussie",
+  "success": "Succès",
+  "e_ajout": "Les informations du formulaire sont incorrects",
+  "success": "Succès",
+  "error": "Erreur",
+  "s_ajout": "Enrégistrement effectué",
+  "v_tel1" :"Le numéro de téléphone 1 ",
+  "v_email" :"Le email ",
+  "v_datenais" :"La date de naissance ",
+  "v_nom" : "Le nom ",
+  "v_sexe" : "Le sexe",
+  "v_prenoms" : "Le prénom ",
+  "v_tel2" : "Le numéro de téléphone 2 ",
+  "v_secteuractivite_id" : "Le secteur d'activités "
 }
