--- a/app/lang/de.json
+++ b/app/lang/de.json
@@ -9,6 +9,7 @@
   "datenais": "Date de naissance",
   "deconnexion": "Déconnexion",
   "description": "Description",
+  "e_ajout": "Les informations du formulaire sont incorrects",
   "editer": "Editer",
   "email": "Email",
   "enregistrerjob": "Enregistrer un travail",
@@ -16,12 +17,15 @@
   "enregistrerpersonne": "Enregistrer une personne",
   "enregistrersecteuractivite": "Enrégistrer un secteur d'activités",
   "enregistrertache": "Enrégistrer une tâche",
+  "error": "Erreur",
+  "feminin": "Féminin",
   "femme": "Femme",
   "homme": "Homme",
   "jobs": "Travaux",
   "libelle": "Libellé",
   "maposition": "Ma Position",
   "marche": "marche",
+  "masculin": "Masculin",
   "menu": "Menu",
   "modedeplacement": "mode de deplacement",
   "modifier": "Modifier",
@@ -30,16 +34,20 @@
   "niveaux": "Niveaux",
   "nom": "Nom",
   "note": "Note",
+  "optionvide": "Sélectionnez un élément",
   "parametres": "Paramètres",
   "personne": "Personnes",
   "personnes": "Personnes",
   "position": "Position",
   "prenoms": "Prenoms",
   "recherche": "Recherche",
+  "s_ajout": "Enrégistrement effectué",
+  "s_modification": "Modification réussie",
   "sauvegarder": "Sauvegarder",
   "secteuractivite": "Secteur d'activité",
   "secteuractivites": "Secteurs d'activité",
   "sexe": "Sexe",
+  "success": "Succès",
   "supprimer": "Supprimer",
   "synchroniser": "Synchroniser",
   "tache": "Tâche",
@@ -51,24 +59,16 @@
   "transit": "transit",
   "utilisateur": "Utilisateur",
   "utilisateurs": "Utilisateurs",
+  "v_datenais": "La date de naissance ",
   "v_description": "La description",
-  "v_libniv": "Le libellé du niveau",
-  "v_note": "La note",
+  "v_email": "Le email ",
   "v_libjob": "Le libellé du travail",
-  "s_modification": "Modification réussie",
-  "success": "Succès",
-  "e_ajout": "Les informations du formulaire sont incorrects",
-  "success": "Succès",
-  "error": "Erreur",
-  "s_ajout": "Enrégistrement effectué",
-  "v_tel1" :"Le numéro de téléphone 1 ",
-  "v_email" :"Le email ",
-  "v_datenais" :"La date de naissance ",
-  "v_nom" : "Le nom ",
-  "v_sexe" : "Le sexe",
-  "v_prenoms" : "Le prénom ",
-  "v_tel2" : "Le numéro de téléphone 2 ",
-  "v_secteuractivite_id" : "Le secteur d'activités ",
-  "feminin": "Féminin",
-  "masculin": "Masculin"
+  "v_libniv": "Le libellé du niveau",
+  "v_nom": "Le nom ",
+  "v_note": "La note",
+  "v_prenoms": "Le prénom ",
+  "v_secteuractivite_id": "Le secteur d'activités ",
+  "v_sexe": "Le sexe",
+  "v_tel1": "Le numéro de téléphone 1 ",
+  "v_tel2": "Le numéro de téléphone 2 "
 }
